Added: add new article, edit article, image uploading, modelMerger. Popular articles are now being displayed on the home page.

--- a/app/Resources/views/author/panel.html.twig
+++ b/app/Resources/views/author/panel.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="/images/category.jpg"
+        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="{% block sectionBackground %}/images/category.jpg{% endblock %}"
              data-speed="0.8"></div>
     </div>
 
