--- a/app/Resources/views/default/article.html.twig
+++ b/app/Resources/views/default/article.html.twig
@@ -26,6 +26,7 @@
                         <!-- Post Body -->
 
                         <div class="post_body ">
+                            <div class="pb-2"><p class="text-dark">{{ article.summary }}</p></div>
                             <div class="ql-editor ql-snow">
                                 {{ article.mainContent|raw }}
                             </div>
