--- a/app/Resources/views/partials/articles/article-author-info-panel.html.twig
+++ b/app/Resources/views/partials/articles/article-author-info-panel.html.twig
@@ -1,6 +1,15 @@
 <div class="post_panel post_panel_top d-flex flex-row align-items-center justify-content-start">
-    <div class="author_image"><div><img src="{{ article.author.profileImage }}" alt=""></div></div>
-    <div class="post_meta"><a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span></div>
+    <div class="author_image">
+        <div><img src="{{ article.author.profileImage }}" alt=""></div>
+    </div>
+    <div class="post_meta">
+        <a href="#">{{ article.author.username }}</a>
+        <span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
+        {% if app.user and article.author.id == app.user.id %}
+            <span><a href="{{ path('edit_article',  {'id':article.id}) }}"
+                     class="btn btn-sm btn-outline-primary text-dark">Edit</a></span>
+        {% endif %}
+    </div>
     <div class="post_share ml-sm-auto">
         <span>share</span>
         <ul class="post_share_list">
