--- a/app/Resources/views/partials/articles/small-card-with-background.html.twig
+++ b/app/Resources/views/partials/articles/small-card-with-background.html.twig
@@ -1,7 +1,8 @@
 <!-- Small Card With Background -->
 <div class="card card_default card_small_with_background grid-item">
     <div class="card_background"
-         style="background:linear-gradient(to right,rgba(0,0,0,0.5), rgba(0,0,0,0.6)),url('{{ article.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;"></div>
+         style="background:linear-gradient(to right,rgba(0,0,0,0.5), rgba(0,0,0,0.6)),url('{{ article.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;">
+    </div>
     <div class="card-body">
         <div class="card-title card-title-small"><a
                     href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a>
