Added "add category", my articles. Fixed sidebar with popular articles, home page with popular articles. New schema

--- a/app/Resources/views/author/articles/edit-article-html.twig
+++ b/app/Resources/views/author/articles/edit-article-html.twig
@@ -2,6 +2,7 @@
 {% block sectionBackground %}{{ article.backgroundImageLink }}{% endblock %}
 {% block sectionBody %}
     <h2 class="text-dark">Edit Article {{ article.id }}</h2>
+    <a href="{{ path('show_article', {'id':article.id}) }}" class="btn btn-info">View Article</a>
     <hr>
     <div id="form-container" class="container">
         {% if errors %}
