--- a/app/Resources/views/default/categories.html.twig
+++ b/app/Resources/views/default/categories.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" data-image-src="/images/category.jpg" data-speed="0.8"></div>
-    </div>
+    {% embed 'partials/banner.html.twig' %} {% endembed %}
 
 <!-- Page Content -->
 
