added some fb-sharing optimizations

--- a/app/Resources/views/default/article.html.twig
+++ b/app/Resources/views/default/article.html.twig
@@ -9,6 +9,7 @@
     <meta property="article:section" content="{{ article.category.categoryName }}">
     <meta property="article:tag" content="lifestyle">
 {% endblock %}
+{% block title %}Jesterous: {{ article.title }}{% endblock %}
 
 {% block body %}
 
