Added ability to follow users, user page with detaisl and articles if any, my followers page for authors. Updated some visual components.

--- a/app/Resources/views/default/article.html.twig
+++ b/app/Resources/views/default/article.html.twig
@@ -39,7 +39,7 @@
                                     {% endfor %}
                                 </ul>
                             </div>
-                            <small>Views: {{ article.views }}</small>
+                            <small>{{ localLang.views }}: {{ article.views }}</small>
                         </div>
 
                         <!-- Bottom Panel -->
