--- a/app/Resources/views/default/contacts.html.twig
+++ b/app/Resources/views/default/contacts.html.twig
@@ -6,8 +6,8 @@
              data-speed="0.8"></div>
         <div class="home_content">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-3">
+                <div class="row clearfix">
+                    <div class="col-lg-6 offset-lg-3 clearfix">
                         <!-- Post Comment -->
                         <div class="post_comment">
                             <div class="contact_form_container">
