--- a/app/Resources/views/author/panel.html.twig
+++ b/app/Resources/views/author/panel.html.twig
@@ -56,6 +56,19 @@
                                 </ul>
                             </div>
                         </div>
+                        <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Followers ({{ app.user.followers|length }})</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('author_followers') }}">My followers</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     {% endblock %}
                 {% endembed %}
             </div>
@@ -80,4 +93,3 @@
     </script>
     {% block sectionScripts %} {% endblock %}
 {% endblock %}
-
