--- a/app/Resources/views/partials/articles/small-card-with-image.html.twig
+++ b/app/Resources/views/partials/articles/small-card-with-image.html.twig
@@ -1,6 +1,6 @@
 <!-- Small Card With Image -->
 <div class="card card_small_with_image grid-item">
-    <img class="card-img-top" src="{{ article.backgroundImageLink }}" alt="{{ article.summary }}" style="max-height: 200px;">
+    <a href="{{ path('show_article', {'id': article.id}) }}"> <img class="card-img-top" src="{{ article.backgroundImageLink }}" alt="{{ article.summary }}" style="max-height: 200px;"></a>
     <div class="card-body">
         <div class="card-title card-title-small">
             <a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a>
