--- a/web/styles/styles/additional_styles.css
+++ b/web/styles/styles/additional_styles.css
@@ -2,12 +2,13 @@
 Table of content
 
 1 -> fonts
-
+    1.1 -> text formatting
 
 2-> header
     2.1 notifications
 
 3-> Back to Top Btn
+
  */
 
 /* fonts */
@@ -40,6 +41,12 @@ Table of content
     box-sizing: border-box;
     background: rgba(0,0,0,1);
 }
+
+    /*text formatting*/
+.raw-content {
+    white-space: pre-wrap;
+}
+    /*text formatting*/
 
 /* !fonts */
 
