--- a/app/Resources/views/partials/scripts.html.twig
+++ b/app/Resources/views/partials/scripts.html.twig
@@ -1,5 +1,5 @@
 <div style="display: none" class="scripts-holer">
-    <script > var CSRF_TOKEN = '{{ csrf_token('token') }}';</script>
+    <script> var CSRF_TOKEN = '{{ csrf_token('token') }}';</script>
     <script src="{{ asset('styles/styles/bootstrap4/popper.js') }}"></script>
     <script src="{{ asset('styles/styles/bootstrap4/bootstrap.min.js') }}"></script>
     <script src="{{ asset('styles/plugins/OwlCarousel2-2.2.1/owl.carousel.js') }}"></script>
@@ -14,5 +14,7 @@
     <script src="{{ asset('styles/js/lang-manager.js') }}"></script>
     <script src="{{ asset('styles/js/business_scripts.js') }}"></script>
     <script src="{{ asset('styles/js/additional-scripts.js') }}"></script>
-    <script src="{{ asset('styles/js/notifications.js') }}"></script>
+    {% if app.user %}
+        <script src="{{ asset('styles/js/notifications.js') }}"></script>
+    {% endif %}
 </div>
