--- a/app/Resources/views/default/subscribe-successful.html.twig
+++ b/app/Resources/views/default/subscribe-successful.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block title %}JEsterous: Subscribed{% endblock %}
 {% block body %}
     {% embed 'partials/banner.html.twig' %} {% endembed %}
 
@@ -8,7 +8,7 @@
             <div class="row row-lg-eq-height">
                 <div class="col-lg-9">
                     <div class="main_content">
-                        {% embed 'partials/lang/' ~  localLang.getLocalLang ~'/login.html.twig' %} {% endembed %}
+                        {% embed 'partials/lang/' ~ localLang.localLang ~ '/subscribed.html.twig' %} {% endembed %}
                     </div>
                 </div>
             </div>
