--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -45,12 +45,14 @@
                             </div>
                             <div class="copyright">
                                 {% if is_granted('ROLE_AUTHOR') %}
-                                    <a href="{{ path('author_panel') }}">Author panel</a>
-                                {% else %}
-                                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                                 | Avision by <a href="https://colorlib.com"
-                                                                    target="_blank">Colorlib</a>
+                                    <a href="{{ path('author_panel') }}">Author panel</a><br/>
                                 {% endif %}
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <a href="#">Admin panel</a><br/>
+                                {% endif %}
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                                | Avision by <a href="https://colorlib.com" target="_blank">Colorlib</a><br>
+                                Website created by <a href="https://www.linkedin.com/in/cyecize/" target="_blank"> Tsvetelin Yakimov</a>
                             </div>
                         </div>
                     </div>
@@ -62,9 +64,9 @@
                     <div class="subscribe_background"></div>
                     <div class="subscribe_content">
                         <div class="subscribe_title">{{ localLang.subscribe }}</div>
-                        <form action="#">
-                            <input type="email" class="sub_input" placeholder="{{ localLang.yourEmail }}"
-                                   required="required">
+                        <form action="{{ path('subscribe_global') }}" method="POST">
+                            <input type="email" class="sub_input" name="email" placeholder="{{ localLang.yourEmail }}" required="required">
+                            <input type="hidden"  name="token" value="{{ csrf_token('token') }}" required="required">
                             <button class="sub_button">
                                 <i class="fa fa-long-arrow-right text-light" aria-hidden="true"></i>
                             </button>
